# jonesvis

./: README.md  pyproject.toml  tbump.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
jonesvis/: main.py  visilbities.py
jonesvis/jones/: __init__.py  bandpass.py  base.py  crosshand_delay.py  delay.py  diag_complex.py  leakage.py  parallactic_angle.py
jonesvis/utils/: angles.py  gains.py  gridding.py  math.py
